--- a/sutairu/package.json
+++ b/sutairu/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.101.0",
+    "@react-three/fiber": "^8.15.19",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +13,7 @@
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "react-scroll-horizontal": "^1.6.6",
+    "three": "^0.162.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
