--- a/sutairu/package.json
+++ b/sutairu/package.json
@@ -8,8 +8,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "countries-list": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-phone-number-input": "^3.3.12",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "react-scroll-horizontal": "^1.6.6",
