--- a/sutairu/package.json
+++ b/sutairu/package.json
@@ -10,8 +10,11 @@
     "@testing-library/user-event": "^13.5.0",
     "countries-list": "^3.1.0",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-phone-number-input": "^3.3.12",
+    "react-pick-color": "^2.0.0",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "react-scroll-horizontal": "^1.6.6",
