--- a/sutairu/package.json
+++ b/sutairu/package.json
@@ -8,8 +8,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "countries-list": "^3.1.0",
+    "@types/mongoose": "^5.11.97",
     "@types/three": "^0.161.2",
+    "countries-list": "^3.1.0",
     "is-path-inside": "^4.0.0",
     "lodash.merge": "^4.6.2",
     "react": "^18.2.0",
