--- a/sutairu/package.json
+++ b/sutairu/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/mongoose": "^5.11.97",
     "@types/three": "^0.161.2",
+    "bcrypt": "^5.1.1",
     "countries-list": "^3.1.0",
     "is-path-inside": "^4.0.0",
     "lodash.merge": "^4.6.2",
