--- a/sutairu/package.json
+++ b/sutairu/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@react-three/drei": "^9.101.0",
     "@react-three/fiber": "^8.15.19",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.5.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
