--- a/sutairu/package.json
+++ b/sutairu/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-scroll-horizontal": "^1.6.6",
     "three": "^0.162.0",
+    "three.regular.helvetiker": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
