--- a/sutairu/package.json
+++ b/sutairu/package.json
@@ -12,6 +12,7 @@
     "@types/three": "^0.161.2",
     "bcrypt": "^5.1.1",
     "countries-list": "^3.1.0",
+    "dotenv": "^16.4.5",
     "is-path-inside": "^4.0.0",
     "lodash.merge": "^4.6.2",
     "react": "^18.2.0",
